# jiyeon/jeonha_redux/src/server/routes/router.js
@@ -7,9 +7,9 @@ const db = require('../dbconnection');
 const cors = require('cors');
 
 
-router.get('/getData', cors(), (req, res) => {
+router.get('/signIn', cors(), (req, res) => {
     
-    db.query("select * from usertable;", (err, rows) => {
+    db.query("select UserWebId, PW from usertable;", (err, rows) => {
         if(!err) {
             console.log(rows);
             res.send(rows);
